--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "description": "Backend server for Cambodian Theater Live Streaming Platform",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node backend/server.js",
+    "dev": "nodemon backend/server.js",
+    "dev:sample": "cross-env USE_SAMPLE_DB=true node backend/server.js",
+    "dev:real": "cross-env USE_SAMPLE_DB=false node backend/server.js"
   },
   "dependencies": {
-    "http-server": "^14.1.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
+    "http-server": "^14.1.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.1",
     "socket.io": "^4.7.2"
